# project1_Sozinova_Uliana_M25-555

./: .gitignore   Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
