[tool.poetry]
name = "project1-sozinova-uliana-m25-555"
version = "0.1.0"
description = "Text-based adventure game in Python 3.12"
authors = ["Uliana Sozinova <uliana.so-dev@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]
